// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PagesVisitor is able to change columns 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "liferay",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 6,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 6,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 6,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 6,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`PagesVisitor is able to change fields 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "liferay",
                "label": "New label 0",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "New label 0",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "New label 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "New label 0",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "New label 0",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "New label 0",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`PagesVisitor is able to change pages 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "liferay",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "New title 0",
  },
]
`;

exports[`PagesVisitor is able to change rows 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [],
      },
      Object {
        "columns": Array [],
      },
      Object {
        "columns": Array [],
      },
      Object {
        "columns": Array [],
      },
    ],
    "title": "Untitled name",
  },
]
`;
